<resources>
    <string name="app_name">Direct WhatsApp</string>
    <string name="phone_no">Your WhatsApp number will be here</string>
    <string name="mobile_no">Mobile no</string>
    <string name="message">Message</string>
    <string name="enter_your_message">Enter your message...</string>
    <string name="send_message">Send Message</string>
    <string name="made_by">Made By ❤</string>
    <string name="nikhil">Nikhil</string>
    <string name="for_any_details">For any details</string>
    <string name="_8459810529">8459810529</string>
    <string name="nikhilmitkari_7_gmail_com">nikhilmitkari.7@gmail.com</string>


    <string name="backbutton">Are you sure,you want to Exit from App?</string>
    <string name="yes_dialog">Yes</string>
    <string name="no_dialog">No</string>
</resources>