<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/mobile_no"
            android:textColor="#0E0A13"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_mob"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:hint="@string/phone_no"
            android:inputType="phone"
            android:padding="2dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/message"
            android:textColor="#0E0A13"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:fontFamily="@font/handlee"
            android:gravity="start"
            android:hint="@string/enter_your_message"
            android:lines="5"
            android:padding="8dp" />

        <Button
            android:id="@+id/send"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/button_layout"
            android:text="@string/send_message" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/made_by"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/nikhil"
                android:textColor="#01BD46"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/for_any_details"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_8459810529"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nikhilmitkari_7_gmail_com"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>